@@ -1,105 +1,0 @@
-                                Release Summary
-
-                      certified-asterisk-1.8.15-cert1-rc3
-
-                                Date: 2013-01-02
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Other Changes
-    4. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release includes new features. For a list of new features that have
-   been included with this release, please see the CHANGES file inside the
-   source package. Since this is new major release, users are encouraged to
-   do extended testing before upgrading to this version in a production
-   environment.
-
-   The data in this summary reflects changes that have been made since the
-   previous release, certified-asterisk-1.8.15-cert1-rc2.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   2 bebuild                
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author  | Summary                       | Issues Referenced |
-   |----------+---------+-------------------------------+-------------------|
-   | 378345   | bebuild | Create 1.8.15-cert1-rc3       |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 378351   | bebuild | Merge 378290, 378333 for      |                   |
-   |          |         | 1.8.15-cert1-rc3              |                   |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- .version                                         |    2
- ChangeLog                                        |   43 +++++++++++
- apps/app_confbridge.c                            |    4 -
- apps/app_meetme.c                                |   16 ++--
- certified-asterisk-1.8.15-cert1-rc2-summary.html |   62 ----------------
- certified-asterisk-1.8.15-cert1-rc2-summary.txt  |   89 -----------------------
- channels/chan_agent.c                            |   12 +--
- channels/chan_dahdi.c                            |    7 +
- channels/chan_iax2.c                             |   31 ++++----
- channels/chan_local.c                            |    3
- channels/chan_sip.c                              |   18 ++--
- channels/chan_skinny.c                           |   16 ++--
- funcs/func_devstate.c                            |    6 -
- include/asterisk/channel.h                       |    6 +
- include/asterisk/devicestate.h                   |   16 +++-
- include/asterisk/event_defs.h                    |    8 +-
- main/channel.c                                   |    5 -
- main/devicestate.c                               |   51 ++++++++-----
- main/event.c                                     |    1
- main/features.c                                  |    2
- main/http.c                                      |   20 +++--
- res/res_calendar.c                               |    8 +-
- res/res_jabber.c                                 |   66 ++++++++++++-----
- 23 files changed, 238 insertions(+), 254 deletions(-)
-
-     ----------------------------------------------------------------------
