@@ -1,3 +1,7 @@
+2013-01-09  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 1.8.15-cert1 Released.
+
 2013-01-02  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 1.8.15-cert1-rc3 Released.
